# mcp-financial-modeling-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-local-usage.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
scripts/: run_integration_tests.py
src/mcp_financial_modeling_prep/: __init__.py  fmp_client.py  server.py
src/mcp_financial_modeling_prep/config/: __init__.py  loader.py
src/mcp_financial_modeling_prep/config/services/: get_historical_prices.json  get_technical_indicators.json
src/mcp_financial_modeling_prep/schema/: __init__.py  loader.py  prompts.json  resources.json
src/mcp_financial_modeling_prep/schema/services/: get_company_profile.json  get_enhanced_dcf_analysis.json
src/mcp_financial_modeling_prep/services/: __init__.py  advanced_financial_health.py  base.py  company_profile.py  dcf_valuation.py  enhanced_dcf.py  financial_ratios.py  historical_prices.py  income_statement.py  market_indices.py  registry.py  stock_quote.py  technical_indicators.py  trading_volume.py
src/mcp_financial_modeling_prep/transport/: __init__.py  http.py  stdio.py
tests/: test_advanced_services.py  test_config_loader.py  test_financial_tools.py  test_fmp_client.py  test_fmp_integration.py  test_schema_loader.py  test_server.py  test_services.py  test_transport.py
