[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-financial-modeling-prep"
version = "0.1.0"
description = "MCP server for Financial Modeling Prep API integration"
authors = [
    {name = "MCP Financial Server", email = "noreply@example.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
    # HTTP transport dependencies
    "uvicorn>=0.24.0",
    "starlette>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests",
]

[project.scripts]
mcp-financial-modeling-prep = "mcp_financial_modeling_prep.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_financial_modeling_prep"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = true
packages = ["src/mcp_financial_modeling_prep"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (requires FMP_API_KEY)",
]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "coverage>=7.9.2",
    "black>=25.1.0",
    "ruff>=0.12.3",
    "mypy>=1.16.1",
    "httpx>=0.24.0",  # For TestClient support
]
